<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".onboarding.OnboardingThirdFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/onboarding3_saltit_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="158dp"
            android:src="@drawable/img_saltit_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/onboarding3_head_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/saltit_font_family_medium"
            android:text="@string/onboarding_third_head_text"
            android:textColor="@color/saltit_gray_01"
            android:textSize="28sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding3_saltit_logo" />

        <TextView
            android:id="@+id/onboarding3_head_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/saltit_font_family_medium"
            android:text="@string/onboarding_third_head_text2"
            android:textColor="@color/saltit_gray_01"
            android:textSize="28sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding3_head_txt" />


        <TextView
            android:id="@+id/onboarding3_monthly_saving_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/saltit_font_family"
            android:gravity="center"
            android:textColor="@color/saltit_blue_text"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/onboarding3_head_txt2"
            tools:text="80,000원" />


        <TextView
            android:id="@+id/onboarding3_subhead_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/saltit_font_family_medium"
            android:text="@string/onboarding_third_subhead_text"
            android:textColor="@color/saltit_gray_02"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding3_monthly_saving_money" />

        <ImageView
            android:id="@+id/onboarding3_salty_fairy_opacity"
            android:layout_width="123dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/img_salty_opacity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding3_subhead_txt" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/onboarding3_next_button_top_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.81" />

        <Button
            android:id="@+id/onboarding_third_btn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/onboarding_next_btn_background"
            android:fontFamily="@font/saltit_font_family"
            android:text="다음"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/onboarding3_next_button_top_gl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>